# PeriHub

./: .env.example  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  Dockerfile  LICENSE.md  README.md  deletePipelines.sh  docker-compose.yml  docker-stack-extern.yml  docker-stack.yml  id_rsa_shared  main.py  modelGeneratorControl.py  points.vtu  shepard_edit.py  shepard_plot.py  shepard_test.py  shepard_timeseries.py
backend/app/: .gitignore  .pylintrc  Makefile  api_main.py  main.py  pyproject.toml  setup.cfg
backend/app/Publications/: papers.bib
backend/app/Verification/: verification_models.py
backend/app/assets/: config_template.json
backend/app/assets/images/: Dogbone.jpg.license
backend/app/dev_models/: test.py
backend/app/dev_models/AttF56F/: attf56f_tmp.py
backend/app/dev_models/Atte6b5/: atte6b5_tmp.py
backend/app/dev_models/CompactTension/: compact_tension.py
backend/app/dev_models/DCBmodel/: dcb_model.py
backend/app/dev_models/Dogbone/: Dogbone.md  Dogbone.pub  dogbone.py
backend/app/dev_models/ENFmodel/: ENFmodel.md  enf_model.py
backend/app/dev_models/G1Cmodel/: g1c_model.py
backend/app/dev_models/GICmodel/: GICmodel.md  gic_model.py
backend/app/dev_models/GIICmodel/: GIICmodel.md  giic_model.py
backend/app/dev_models/KICmodel/: kic_model.py
backend/app/dev_models/KIICmodel/: kiic_model.py
backend/app/guides/: Buttons.md  FAQ.md  GettingStarted.md  Introduction.md
backend/app/guides/input/: Job.md  (+7 more)
backend/app/models/: CompactTension.py  Dogbone.py  ENFmodel.py
backend/app/routers/: delete.py  docs.py  energy.py  generate.py  jobs.py  logging.py  model.py  results.py  translate.py  upload.py
backend/app/support/: base_models.py  file_handler.py  globals.py
(+684 files in other folders)
