# SPDX-FileCopyrightText: 2023 PeriHub <https://github.com/PeriHub/PeriHub>
#
# SPDX-License-Identifier: Apache-2.0

[tool.poetry]
name = "perihub"
version = "3.1.0"
description = "PeriHub"
license = "Apache-2.0"
authors = ["Jan-Timo Hesse"]
readme = "README.md"
include = ["README.md", "changelog.md", "LICENSE", "doc", "*.rst", "conf.py", "Makefile"]
repository = "https://github.com/PeriHub/PeriHub"
keywords = ["perihub","perilab","peridynamics"]

[tool.poetry.scripts]
#sample-calculator = "sample_calculator.main:cmd_main"

[tool.poetry.dependencies]
python = "^3.8"
tomlkit = "*"
numpy = "*"
matplotlib = "*"
scikit-learn = "*"
rich = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
flake8 = "*"
black = "*"
isort = "*"
bandit = "*"
Sphinx = "*"
sphinx_rtd_theme = "*"
sphinxcontrib-bibtex = "*"
sphinxcontrib-blockdiag = "*"
pre-commit = "*"
importlib-metadata = "*"

[tool.coverage.run]
branch = true

[tool.coverage.html]
directory = "build/htmlcov"

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | doc
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
line_length = 120
skip = "doc"
profile = 'black'

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--ignore=dev_models"

[tool.flake8]
max-line-length = 120
exclude = "./dev_models"
